# template-benchmarks-rs

./: .gitignore  Cargo.toml  Justfile  README.md  convert.awk  criterion.toml  make-results.sh  results
.github/: dependabot.yml
askama/: Cargo.toml  askama.rs
benches/: all.rs
handlebars/: Cargo.toml  handlebars.rs
horrorshow/: Cargo.toml  horrorshow.rs
liquid/: Cargo.toml  liquid.rs
results/: results.txt
src/: askama_bench.rs  build.rs  fmt.rs  fomat.rs  fomat_bench.rs  format_bench.rs  handlebars.rs  horrorshow_bench.rs  lib.rs  liquid.rs  markup_bench.rs  maud_bench.rs  nate_bench.rs  ructe.rs  rusty_html.rs  sailfish.rs  std_write.rs  tera.rs  write_bench.rs  yarte_bench.rs
templates/: big-table.hbs  big-table.hbs.html  big-table.html  teams.hbs  teams.hbs.html  teams.html
templates_nate/: big-table.html  teams.html
templates_ructe/: big_table.rs.html  teams.rs.html
tera/: Cargo.toml  tera.rs
