[package]
name = "template-benchmarks-rs"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
build = "src/build.rs"

[dependencies]
askama = "0.7"
criterion = "0.2"
handlebars = "1"
horrorshow = "0.6"
liquid = "0.15"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.7"
tera = "0.11"

[build-dependencies]
ructe = "0.4"

[build-dependencies]
ructe = { git = "https://github.com/kaj/ructe" }

[[bench]]
name = "all"
harness = false
