[package]
name = "template-benchmarks-rs"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
build = "src/build.rs"

[dependencies]
askama = { git = "https://github.com/djc/askama" }
criterion = "0.2"
handlebars = { git = "https://github.com/sunng87/handlebars-rust" }
horrorshow = { git = "https://github.com/Stebalien/horrorshow-rs" }
liquid = { git = "https://github.com/cobalt-org/liquid-rust" }
markup = { git = "https://github.com/utkarshkukreti/markup.rs" }
yarte = { git = "https://gitlab.com/r-iendo/yarte" }
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
tera = { git = "https://github.com/Keats/tera" }
fomat-macros = { git = "https://github.com/krdln/fomat-macros" }

[build-dependencies]
ructe = { git = "https://github.com/kaj/ructe" }

[[bench]]
name = "all"
harness = false
