[package]
name = "template-benchmarks-rs"
version = "0.0.1"
edition = "2018"

[dependencies]
criterion = "0.2.11"
handlebars = "1.1.0"
fomat-macros = "0.3.1"
horrorshow = "0.6.6"
markup = "0.3.1"
maud = "0.20.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"

[[bench]]
name = "all"
harness = false

# The benchmarking profile, used for `cargo bench` and `cargo test --release`.
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'